Button-panels : changed orientation of handles to avoid obstructing scrollbar in some case

--- a/app/src/js/button_panel/style.less
+++ b/app/src/js/button_panel/style.less
@@ -141,10 +141,10 @@
           pointer-events: auto;
           min-height: 30px;
           min-width: 30px;
-          max-width: 150px;
           opacity: 0;
           cursor: pointer;
           transition: opacity 500ms ease-in-out;
+          display:flex;
           &:hover {
             opacity: 1;
             margin: 30px;
@@ -167,6 +167,7 @@
           &.button-panel--top-right {
             margin-top: -15px;
             margin-right: -15px;
+            flex-direction: row-reverse;
           }
           &.button-panel--top-left {
             margin-top: -15px;
@@ -195,7 +196,6 @@
             align-items: center;
             justify-content: center;
             position: relative;
-
             &:before {
               display: block;
             }
